# deprecated-cube-engine-inexor

./: .gitignore  .gitmodules  .npmignore  .travis.yml  0zapftis.sh  CMakeLists.txt  Jenkinsfile  Makefile  README.html  README.md  appveyor.yml  changelog.md  conanfile.py  conanfile.txt  console.css  console.html  console.js  contributing.md  credits.md  dependencies.py  doxygen-parser.conf  doxygen.conf  inexor-logging.conf  inexor.bat  inexor_cipc_unix  inexor_logging.conf  inexor_node_unix  inexor_node_windows.bat  inexor_unix  license.md  master.cfg  nightly-build.sh  oldreadme.md  package.json  purge.todo.md  readme.md  rpg.bat  sauerbraten.bat  sauerbraten_unix  server-init.cfg  (+4 more)
inexor/: 2  CMakeLists.txt  functions.cmake  net.h  net.hpp  readme.md  ui.h  ui.hpp  util.hpp
inexor/cef_subprocess/: CMakeLists.txt  main.cpp  main.hpp
inexor/client/: CMakeLists.txt  network.hpp
inexor/compat/: make_unique.hpp  minmax.hpp
inexor/crashreporter/: CMakeLists.txt  CrashReporter.cpp  CrashReporter.hpp  StackWalker_posix.h  StackWalker_posix.hpp  StackWalker_windows.h  StackWalker_windows.hpp  readme.md
inexor/engine/: 3dgui.cpp  3dgui.hpp  animmodel.h  animmodel.hpp  bih.cpp  bih.h  bih.hpp  blend.cpp  blend.hpp  blob.cpp  blob.hpp  client.cpp  command.cpp  console.cpp  console.hpp  decal.cpp  decal.hpp  depthfx.cpp  depthfx.h  depthfx.hpp  dynlight.cpp  dynlight.hpp  engine.h  engine.hpp  explosion.cpp  explosion.h  explosion.hpp  frame.cpp  frame.hpp  glare.cpp  glare.hpp  glemu.cpp  glemu.hpp  glexts.h  glexts.hpp  grass.cpp  grass.hpp  iqm.h  iqm.hpp  lensflare.h  (+79 more)
inexor/entity/: CMakeLists.txt  EntitySystem.cpp  EntitySystem.hpp  EntitySystemBase.hpp  EntityTest.cpp  EntityTest.hpp
inexor/entityrendering/: CMakeLists.txt
inexor/filesystem/: CMakeLists.txt  ExecutablePath.hpp  mediadirs.cpp  mediadirs.hpp  path.cpp  path.hpp
inexor/flowgraph/: CMakeLists.txt  flowgraph.cpp  flowgraph.h  flowgraph.hpp
inexor/fpsgame/: ai.cpp  ai.h  ai.hpp  aiman.h  aiman.hpp  bomb.h  bomb.hpp  capture.h  capture.hpp  client.cpp  client.hpp  collect.h  collect.hpp  config.hpp  ctf.h  ctf.hpp  entities.cpp  entities.hpp  extinfo.h  extinfo.hpp  fps.cpp  fps.hpp  fpsent.hpp  fpsstate.hpp  game.h  game.hpp  gamemode.hpp  guns.hpp  hideandseek.h  hideandseek.hpp  monster.cpp  movable.cpp  movable.hpp  network_types.hpp  player.hpp  projectile.hpp  render.cpp  render.hpp  scoreboard.cpp  scoreboard.hpp  (+6 more)
inexor/gamemode/: CMakeLists.txt  bomb_client.hpp  bomb_common.hpp  bomb_server.hpp  capture_client.hpp  capture_common.hpp  capture_server.hpp  collect_client.hpp  collect_common.hpp  collect_server.hpp  ctf_client.hpp  ctf_common.hpp  ctf_server.hpp  gamemode.cpp  gamemode.hpp  gamemode_client.hpp  gamemode_server.hpp  hideandseek_client.hpp  hideandseek_common.hpp  hideandseek_server.hpp
inexor/geom/: CMakeLists.txt  geom.h  geom.hpp
inexor/gluegen/: .gitignore  CMakeLists.txt  Makefile  ParserContext.cpp  ParserContext.hpp  conanfile.py  cpp_parser.hpp  fill_templatedata.cpp  fill_templatedata.hpp  generate_files.cpp  generate_files.hpp  generator_cpp_tree_adapter.cpp  generator_cpp_tree_adapter.hpp  generator_protoc.cpp  generator_protoc.hpp  gluegen.cpp  parse_helpers.cpp  parse_helpers.hpp  parse_sharedclass.cpp  parse_sharedclass.hpp  parse_sharedfunc.cpp  parse_sharedfunc.hpp  parse_sharedoption.cpp  parse_sharedoption.hpp  parse_sourcecode.cpp  parse_sourcecode.hpp  parser_cpp_shared_var.hpp  protoc_generator.cpp  protoc_generator.hpp  readme.md  require_run_gluegen.cmake  tree.cpp  tree.hpp
inexor/inexor_cef_subprocess/: CMakeLists.txt  main.cpp
inexor/io/: CMakeLists.txt  Error.cpp  Error.hpp  Logging.cpp  Logging.hpp
inexor/libraries/: CMakeLists.txt
inexor/master/: CMakeLists.txt
inexor/math/: CMakeLists.txt
inexor/model/: CMakeLists.txt  animmodel.hpp  iqm.hpp  md2.hpp  md3.hpp  md5.hpp  model.hpp  obj.hpp  ragdoll.cpp  ragdoll.hpp  rendermodel.cpp  rendermodel.hpp  skelmodel.hpp  smd.hpp  vertmodel.hpp
inexor/muparser/: CMakeLists.txt
inexor/net/: CMakeLists.txt  MCByteBuffer.cpp  MCByteBuffer.hpp  MCHub.cpp  MCHub.h  MCHub.hpp  MCServer.h  MCServer.hpp  MCSocket.h  MCSocket.hpp  MCSocketServer.cpp  MCSocketServer.h  MCSocketServer.hpp  MCStreamChopper.h  MCStreamChopper.hpp  MessageConnect.hpp  readme.md
inexor/network/: CMakeLists.txt  IsLocalConnection.hpp  RPCBindingandContext.gen.template.cpp  RpcServer.hpp  RpcSubsystem.hpp  RpcTestClient.hpp  SharedClass.hpp  SharedFunc.hpp  SharedList.hpp  SharedOptions.hpp  SharedTree.hpp  SharedVar.hpp  doxygen-parser.conf.in  generate_doxygen_conf.cmake  inexor-tree.gen.template.proto  require_run_gluegen.cmake
inexor/particle/: CMakeLists.txt  ParticleTest.cpp  ParticleTest.hpp
inexor/physics/: CMakeLists.txt  bih.cpp  bih.hpp  mpr.hpp  physics.cpp  physics.hpp
inexor/rpc/: .gitignore  CMakeLists.txt  InexorServiceImpl.cpp  InexorServiceImpl.h  InexorServiceImpl.hpp  MCRpcServer.cpp  MCRpcServer.h  MCRpcServer.hpp  RPCBindingandContext.gen.template.cpp  RPCTreeData.gen.template.proto  RpcServer.hpp  RpcSubsystem.cpp  RpcSubsystem.h  RpcSubsystem.hpp  RpcTestClient.hpp  SharedClass.hpp  SharedFunc.hpp  SharedList.hpp  SharedOptions.hpp  SharedTree.hpp  SharedVar.h  SharedVar.hpp  doxygen-parser.conf.in  inexor_service.proto  readme.md  treedata.gen.hpp  treedata.gen.proto  treedata.gen.template.cpp  treedata.gen.template.hpp  treedata.gen.template.proto
inexor/server/: CMakeLists.txt  client_management.cpp  client_management.hpp  demos.cpp  demos.hpp  extinfo.cpp  extinfo.hpp  game_management.cpp  game_management.hpp  main.cpp  map_management.cpp  map_management.hpp  network.hpp  network_send.cpp  network_send.hpp  windows_integration.cpp  windows_integration.hpp
inexor/shared/: command.h  command.hpp  crypto.cpp  cube.h  cube.hpp  cube_endian.hpp  cube_formatting.hpp  cube_hash.hpp  cube_loops.hpp  cube_network.hpp  cube_queue.hpp  cube_sort.hpp  cube_tools.hpp  cube_types.hpp  cube_unicode.cpp  cube_unicode.hpp  ents.hpp  (+20 more)
src/: CMakeLists.txt  Makefile  functions.cmake  masterserver.py  readme.md
(+1251 files in other folders)
